--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 </head>
 
 <body>
-
+    <h1 class="page-title">
+        Which Game Should I play?
+    </h1>
+    <h2 class="page-subtitle">
+        Let's find out!
+    </h2>
+    <img src="Images/pink_cat.png" alt = "main-character" class="character" width="400" height="450">
+    <a href="questions.html" class="btn btn-pink">
+        Start the test
+    </a>
+    <div class="btn btn-grey btn-small">
+        Share with other people
+    </div>
 </body>
 </html>
