--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Which game should I play?</title>
     <link rel="icon" href="Images/pink_cat_face.png">
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="css/common.css">
 </head>
 
 <body>
