--- a/questions.html
+++ b/questions.html
@@ -3,9 +3,9 @@
 <head>
     <title>Which game should I play?</title>
     <link rel="icon" href="Images/cat.jpg">
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="questions.css">
-    <script type="module" defer src="questions.js"></script>
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/questions.css">
+    <script type="module" defer src="js/questions.js"></script>
 </head>
 
 <body>
