example images and questions

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- CORS-enabled local server command: http-server --cors -p 8080 -->
     <title>Which game should I play?</title>
     <link rel="icon" href="Images/pink_cat_face.png">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/questions.css">
+    <script defer src="./js/share.js"></script>
+    
 </head>
 
 <body>
