--- a/questions.html
+++ b/questions.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="Images/pink_cat.png">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/questions.css">
-    <script type="module" defer src="http://localhost:8080/js/questions.js"></script>
+    <script type="module" defer src="js/questions.js"></script>
 </head>
 
 <body>
