--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <!-- CORS-enabled local server command: http-server --cors -p 8080 -->
     <title>Which game should I play?</title>
-    <link rel="icon" href="Images/pink_cat_face.png">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/questions.css">
+    <link rel="icon" href="./Images/pink_cat_face.png">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/questions.css">
     <script defer src="./js/share.js"></script>
     
 </head>
@@ -17,8 +17,8 @@
     <h2 class="page-subtitle">
         Let's find out!
     </h2>
-    <img src="Images/pink_cat.png" alt = "main-character" class="character" width="400" height="450">
-    <a href="questions.html" class="btn btn-pink">
+    <img src="./Images/pink_cat.png" alt = "main-character" class="character" width="400" height="450">
+    <a href="./questions.html" class="btn btn-pink">
         Start the test
     </a>
     <div class="btn btn-grey btn-small">
