--- a/results.html
+++ b/results.html
@@ -3,9 +3,9 @@
 <head>
     <!-- CORS-enabled local server command: http-server --cors -p 8080 -->
     <title>Which game should I play?</title>
-    <link rel="icon" href="Images/pink_cat_face.png">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/results.css">
+    <link rel="icon" href="./Images/pink_cat_face.png">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/results.css">
 
     <script defer src="./js/share.js"></script>
     <script type="module" defer src="./js/results.js"></script>
