--- a/questions.html
+++ b/questions.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Which game should I play?</title>
-    <link rel="icon" href="Images/pink_cat.png">
+    <link rel="icon" href="./Images/pink_cat.png">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/questions.css">
     <script type="module" defer src="./js/questions.js"></script>
