--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2 class="page-subtitle">
         Let's find out!
     </h2>
-    <img src="./Images/pink_cat.png" alt = "main-character" class="character" width="400" height="450">
+    <img src="./Images/white_cat.png" alt = "main-character" class="character" width="400" height="450">
     <a href="./questions.html" class="btn btn-pink">
         Start the test
     </a>
