--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/questions.css">
     <script defer src="./js/share.js"></script>
-    
+
+    <style>
+        body {
+          background-image: url('./Images/bk.png');
+        }
+        </style>
 </head>
 
 <body>
